Fix header wrap on mobile

--- a/src/features/marketing/Bio/Header/Header.module.scss
+++ b/src/features/marketing/Bio/Header/Header.module.scss
@@ -21,7 +21,7 @@
     flex-direction: column;
     justify-content: flex-start;
   margin: 0 auto;
-  width: min(56rem, 90%);
+  width: min(48rem, 100%);
 
   @media (min-width: 1280px) {
     margin: 0;
